updated the footer to have centered text on smaller devices. this aligns with the other text and is no longer offset

--- a/css/style.css
+++ b/css/style.css
@@ -455,6 +455,14 @@ body {
   h1 {
     text-align: center;
   }
+
+  .text-to-copy {
+    text-align: center;
+  }
+
+  .footer-link p {
+    text-align: center;
+  }
 }
 
 .accordion-button:not(.collapse) {
